tests/Toimik.WarcProtocol.Tests/Data/Invalid/short_content_block.warc
WARC/1.1
WARC-Date: 2000-01-01T12:34:56Z
WARC-Record-ID: <urn:uuid:3a59c5c8-d806-4cdb-83aa-b21495d11063>
WARC-Type: request
Content-Length: 11

foo